ready to new brench

--- a/core/templates/core/password/password_reset_form.html
+++ b/core/templates/core/password/password_reset_form.html
@@ -3,10 +3,10 @@
     <title>Solicitar Redefinição de Senha</title>
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto pt-20">
+<body class="flex bg-gray-100">
+    <div class="flex-col pl-96 w-full pt-20">
         <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
-        <form method="post" class="space-y-4">
+        <form method="post" class="w-full space-y-4">
             {% csrf_token %}
             {{form}}
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
