started schedule logic

--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -10,9 +10,7 @@
   <label class="ml-12 text-color-txt-perfil">
     Curso:
     <select class="text-zinc-500">
-      <option>Desenvolvimento de Sistemas</option>
-      <option>ooi</option>
-      <option>Bruno LM</option>
+      <option>{{ user.profile.classroom.course.name }}</option>
     </select>
   </label>
   <label class="ml-12 text-color-txt-perfil">
