--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -69,7 +69,9 @@
 
     <section class="rounded-xl bg-slate-300 p-5">
       <h2 class="mb-3 text-2xl font-semibold">Editar aula</h2>
-      <form action="" class="flex flex-col justify-end">
+      <form action="{% url 'schedules' classroom.pk %}" method="post" class="flex flex-col justify-end">
+        {% csrf_token %}
+        <input type="hidden" name="classroom" value="{{ classroom.pk }}">
         <section class="flex gap-2 p-4">
           <input type="text" hidden id="txt-classroom" name="classroom" />
           <div>
@@ -83,7 +85,7 @@
               maxlength="3"
               x-model="programmingDayShow"
             />
-            <input type="text" hidden name="day" x-model="programmingDay" />
+            <input type="number" hidden name="day" x-model="programmingDay" />
           </div>
           <div>
             <label class="text-slate-500" id="txt-time">Horário:</label>
@@ -109,12 +111,12 @@
           </div>
           <div>
             <label for="txt-teacher">Professor:</label>
-            <input type="number" name="teacher" id="txt-teacher" />
+            <input type="text" name="teacher" id="txt-teacher" />
           </div>
           <div class="flex items-center gap-2">
             <label for="">Grupo:</label>
             <div class="flex items-center">
-              <input type="radio" name="group" id="rd-all" value="N" checked />
+              <input type="radio" name="group" id="rd-all" value="" checked />
               <label for="rd-all">Todos</label>
               <input type="radio" name="group" id="rd-a" value="A" />
               <label for="rd-a">A</label>
