--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -43,6 +43,7 @@
       programmingTimeShow: "",
       programmingDay: 1,
       programmingDayShow: "",
+      studentGroup: "",
     }));
   });
 </script>
@@ -115,26 +116,46 @@
           </div>
         </section>
         <section class="flex flex-col gap-3 rounded-xl bg-slate-200 p-4">
-          <div>
-            <label for="sl-subject">Matéria:</label>
-            <select name="subject" id="sl-subject">
-              {% for subject in subjects %}
-              <option value="{{ subject.pk }}">{{ subject.name }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <div>
-            <label for="txt-teacher">Professor:</label>
-            <input type="text" name="teacher" id="txt-teacher" />
+          <div class="flex">
+            <div class="flex flex-col gap-3">
+              <div>
+                <label for="sl-subject">Matéria:</label>
+                <select name="subject" id="sl-subject">
+                  {% for subject in subjects %}
+                  <option value="{{ subject.pk }}">{{ subject.name }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <div>
+                <label for="txt-teacher">Professor:</label>
+                <input type="text" name="teacher" id="txt-teacher" />
+              </div>
+            </div>
+            <template x-if="studentGroup != ''">
+              <div class="flex flex-col gap-3">
+                <div>
+                  <label for="sl-subject">Matéria:</label>
+                  <select name="subject" id="sl-subject">
+                    {% for subject in subjects %}
+                    <option value="{{ subject.pk }}">{{ subject.name }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+                <div>
+                  <label for="txt-teacher">Professor:</label>
+                  <input type="text" name="teacher" id="txt-teacher" />
+                </div>
+              </div>
+            </template>
           </div>
           <div class="flex items-center gap-2">
             <label for="">Grupo:</label>
             <div class="flex items-center">
-              <input type="radio" name="group" id="rd-all" value="" checked />
+              <input type="radio" name="group" id="rd-all" value="" x-model="studentGroup" checked />
               <label for="rd-all">Todos</label>
-              <input type="radio" name="group" id="rd-a" value="A" />
+              <input type="radio" name="group" id="rd-a" value="A" x-model="studentGroup" />
               <label for="rd-a">A</label>
-              <input type="radio" name="group" id="rd-b" value="B" />
+              <input type="radio" name="group" id="rd-b" value="B" x-model="studentGroup" />
               <label for="rd-b">B</label>
             </div>
           </div>
