--- a/core/templates/core/reporte.html
+++ b/core/templates/core/reporte.html
@@ -1,9 +1,9 @@
-{% extends 'core/base.html' %} {% load static %} {% block head %}
-
-{% endblock %} {% block content %} 
-<div class="flex justify-center min-h-full pt-24">
-    <div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]"> Reporte de Problemas </div>
-    </div>
-
+{% extends 'core/base.html' %} {% load static %} {% block head %} {% endblock %}
+{% block content %}
+<div class="flex min-h-full justify-center pt-24">
+  <div class="w-[50%] text-[30px] font-semibold text-color-primary">
+    Reporte de Problemas
+  </div>
+</div>
 
 {% endblock %}
