--- a/core/templates/core/eventos.html
+++ b/core/templates/core/eventos.html
@@ -4,7 +4,7 @@
 {% endblock %} {% block content %}
 
 <div class="flex justify-center min-h-full pt-24">
-  <div class="text-[30px] text-color-txt-perfil font-semibold w-[50%]">Eventos</div>
+  <div class="text-[30px] text-color-primary font-semibold w-[50%]">Eventos</div>
   <div class="rounded-2xl border border-color-secondary p-1.5">
     <img
     src="{% static '/core/images/filter.png' %}"
@@ -31,7 +31,7 @@
 		<li class="relative border-b border-black-200">
 
 			<button type="button" class="w-full px-8 py-6 text-left" @click="selected !== 1 ? selected = 1 : selected = null">
-				<div class="flex items-center justify-between, text-[20px] text-color-txt-perfil font-semibold w-[70%]">
+				<div class="flex items-center justify-between, text-[20px] text-color-primary font-semibold w-[70%]">
           <img
             src="{% static '/core/images/reuniao.jpg' %}"
             alt="Reunião"
@@ -86,7 +86,7 @@
         <li class="relative border-b border-black-200">
     
           <button type="button" class="w-full px-8 py-6 text-left" @click="selected !== 1 ? selected = 1 : selected = null">
-            <div class="flex items-center justify-between, text-[20px] text-color-txt-perfil font-semibold w-[70%]">
+            <div class="flex items-center justify-between, text-[20px] text-color-primary font-semibold w-[70%]">
               <img
                 src="{% static '/core/images/reuniao.jpg' %}"
                 alt="Reunião"
