--- a/core/templates/core/perfil.html
+++ b/core/templates/core/perfil.html
@@ -3,15 +3,15 @@
 <title>Perfil de {{ user.username.split.0 }}</title>
 {% endblock %} {% block content %}
 <main class="mb-10 px-8">
-  <h1 class="pb-6 text-4xl font-bold text-color-txt-perfil">Perfil</h1>
+  <h1 class="pb-6 text-4xl font-bold text-color-primary">Perfil</h1>
   <section class="mb-8 flex">
     <img
       src="{{ user.profile.picture.url }}"
       alt="Foto de perfil"
-      class="h-36 w-36 cursor-pointer rounded-full border-[6px] border-color-txt-perfil"
+      class="h-36 w-36 cursor-pointer rounded-full border-[6px] border-color-primary"
     />
     <div class="pl-5">
-      <h2 class="truncate text-xl font-semibold text-color-txt-perfil">
+      <h2 class="truncate text-xl font-semibold text-color-primary">
         {{ user.username }}
       </h2>
       <ul>
