--- a/management/templates/management/classrooms.html
+++ b/management/templates/management/classrooms.html
@@ -49,7 +49,7 @@
       </div>
     </form>
   </dialog>
-  <dialog :open="deleteDialog" class="rounded-2xl p-6 shadow-lg">
+  <dialog :open="deleteDialog" class="z-10 rounded-2xl p-6 shadow-lg">
     <form
       action="{% url 'delete_classroom' %}"
       method="post"
@@ -70,23 +70,25 @@
           d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
         />
       </svg>
-      <p>
+      <p class="text-center">
         Cuidado! Isso pode <br />
         desalocar turmas e horários.
       </p>
       <input type="hidden" name="pk" x-model="pk" />
-      <button
-        @click.prevent="deleteDialog = false"
-        class="rounded-lg border border-slate-500 p-3"
-      >
-        Voltar
-      </button>
-      <button
-        type="submit"
-        class="rounded-lg border-0 bg-red-500 p-3 text-white"
-      >
-        Confirmar
-      </button>
+      <div class="flex gap-3">
+        <button
+          @click.prevent="deleteDialog = false"
+          class="rounded-lg border border-slate-500 p-3"
+        >
+          Voltar
+        </button>
+        <button
+          type="submit"
+          class="rounded-lg border-0 bg-red-500 p-3 text-white"
+        >
+          Confirmar
+        </button>
+      </div>
     </form>
   </dialog>
   <header class="mb-4 flex justify-between">
@@ -162,7 +164,7 @@
         @click.away="() => options = false"
       >
         <button
-          class="hover:text-color-dark-orange"
+          class="hover:text-color-secondary"
           @click="() => {
             classroomDialog = true;
             course = '{{ classroom.course.slug }}';
@@ -173,14 +175,14 @@
           Editar
         </button>
         <button
-          class="hover:text-color-dark-orange"
+          class="hover:text-color-secondary"
           @click="() => { deleteDialog = true; pk = '{{ course.pk }}'}"
         >
           Excluir
         </button>
         <a
           href="{% url 'schedules' classroom.pk %}"
-          class="hover:text-color-dark-orange"
+          class="hover:text-color-secondary"
         >
           Horários
         </a>
