--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -63,7 +63,7 @@
       {% csrf_token %}
       <input type="hidden" name="pk" x-model="pk" />
       <h2 class="mb-3 flex justify-between text-xl font-semibold">
-        <span class="text-color-txt-perfil">Criar curso</span>
+        <span class="text-color-primary">Criar curso</span>
         <button @click.prevent="courseDialog = false">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -144,7 +144,7 @@
       <div class="mt-3 flex justify-center">
         <button
           type="submit"
-          class="rounded-2xl border-2 border-color-dark-orange bg-color-secondary px-5 py-2"
+          class="rounded-2xl border-2 border-color-secondary bg-color-hover px-5 py-2 font-bold text-yellow-700"
         >
           Salvar
         </button>
@@ -154,7 +154,7 @@
   <dialog :open="filterDialog" class="rounded-2xl p-6 shadow-lg">
     <form action="{% url 'courses' %}" method="get" class="flex flex-col gap-2">
       <h2 class="mb-3 flex justify-between text-xl font-semibold">
-        <span class="text-color-txt-perfil">Filtrar</span>
+        <span class="text-color-primary">Filtrar</span>
         <button @click.prevent="filterDialog = false">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -205,24 +205,24 @@
       <div class="mt-3 flex justify-center gap-3">
         <button
           type="reset"
-          class="rounded-2xl border-2 border-color-dark-orange bg-amber-50 px-5 py-2"
+          class="rounded-full border-2 border-color-secondary bg-transparent px-5 py-2 font-bold text-yellow-700 transition-all hover:bg-color-hover"
         >
           Limpar
         </button>
         <button
           type="submit"
-          class="rounded-2xl border-2 border-color-dark-orange bg-color-secondary px-5 py-2"
+          class="rounded-full border-2 border-color-secondary bg-transparent px-5 py-2 font-bold text-yellow-700 transition-all hover:bg-color-hover"
         >
           Aplicar
         </button>
       </div>
     </form>
   </dialog>
-  <dialog :open="subjectDialog" class="rounded-2xl shadow-lg p-5">
+  <dialog :open="subjectDialog" class="rounded-2xl p-5 shadow-lg">
     <form action="{% url 'create_subject' %}" method="post">
       {% csrf_token %}
-      <h2 class="text-xl font-bold flex justify-between mb-3">
-        <span class="text-color-txt-perfil">Nova matéria</span>
+      <h2 class="mb-3 flex justify-between text-xl font-bold">
+        <span class="text-color-primary">Nova matéria</span>
         <button @click.prevent="subjectDialog = false">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -331,23 +331,25 @@
           d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
         />
       </svg>
-      <p>
+      <p class="text-center">
         Cuidado! Isso pode <br />
         desalocar turmas e horários.
       </p>
       <input type="hidden" name="pk" x-model="pk" />
-      <button
-        @click.prevent="deleteDialog = false"
-        class="rounded-lg border border-slate-500 p-3"
-      >
-        Voltar
-      </button>
-      <button
-        type="submit"
-        class="rounded-lg border-0 bg-red-500 p-3 text-white"
-      >
-        Confirmar
-      </button>
+      <div class="flex gap-3">
+        <button
+          @click.prevent="deleteDialog = false"
+          class="rounded-lg border border-slate-500 p-3"
+        >
+          Voltar
+        </button>
+        <button
+          type="submit"
+          class="rounded-lg border-0 bg-red-500 p-3 text-white"
+        >
+          Confirmar
+        </button>
+      </div>
     </form>
   </dialog>
 
@@ -443,7 +445,7 @@
             @click.away="() => options = false"
           >
             <button
-              class="hover:text-color-dark-orange"
+              class="hover:text-color-secondary"
               @click="() => {
                 courseDialog = true;
                 name = '{{ course.name }}';
@@ -459,7 +461,7 @@
               Editar
             </button>
             <button
-              class="hover:text-color-dark-orange"
+              class="hover:text-color-secondary"
               @click="() => { deleteDialog = true; pk = '{{ course.pk }}'}"
             >
               Excluir
