--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -61,18 +61,34 @@
   <div class=" mt-6" x-data="{ selected: 'option-1' }">
     <nav class="">
       <ul class="flex justify-center">
-          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-1' }">
-              <a href="#option-1" @click="selected = 'option-1'" class="text-color-primary">Nota</a>
-          </li>
-          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-2' }">
-              <a href="#option-2" @click="selected = 'option-2'" class="text-color-primary">Prova | Atividade</a>
-          </li>
-          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-3' }">
-              <a href="#option-3" @click="selected = 'option-3'" class="text-color-primary">Reposições</a>
-          </li>
-          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-4' }">
-              <a href="#option-4" @click="selected = 'option-4'" class="text-color-primary">Plano de Ensino</a>
-          </li>
+        <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-1' }">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-1'">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
+          </svg>
+          <a href="#option-1" @click="selected = 'option-1'" class="hidden text-color-primary md:block">Nota</a>
+        </li>
+      
+        <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-2' }">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-2'">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z" />
+          </svg>          
+          <a href="#option-2" @click="selected = 'option-2'" class="hidden text-color-primary md:block">Prova | Atividade</a>
+        </li>
+
+        <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-3' }">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-3'">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
+          </svg>          
+          <a href="#option-3" @click="selected = 'option-3'" class="hidden text-color-primary md:block">Reposições</a>
+        </li>
+
+        <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-4' }">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-4'">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.697 50.697 0 0112 13.489a50.702 50.702 0 017.74-3.342M6.75 15a.75.75 0 100-1.5.75.75 0 000 1.5zm0 0v-3.675A55.378 55.378 0 0112 8.443m-7.007 11.55A5.981 5.981 0 006.75 15.75v-1.5" />
+          </svg>          
+          <a href="#option-4" @click="selected = 'option-4'" class="hidden text-color-primary md:block">Plano de Ensino</a>
+        </li>
       </ul>
   </nav>
   
